# at_relay

./: .gitignore  README.md  pyproject.toml  report.xml
.github/workflows/: test.yml
examples/: usb-relay-at.py
src/at_relay/: __init__.py  error.py  relay.py
tests/: conftest.py  test_baudrate.py  test_board.py  test_channels.py  utils.py
