[project]
name = "at_relay"
version = "0.1.0"
authors = [{ name = "Nicolai Buchwitz", email = "nb@tipi-net.de" }]
description = "AT command controlled relay interface"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["testing", "hardware"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pyserial"]

[project.optional-dependencies]
"test" = ["pytest", "mock_serial", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
eol-frontend = "frontend.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["at_relay"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "Q",   # flake8-quotes
]
ignore = [
    "ANN101", # missing-type-self
    "D107",   # undocumented-public-init
]

[tool.ruff.mccabe]
max-complexity = 10
